Module 9/m09a02rowing-handout/grading/2024-11-04-17-17-48/compile.err
BoatTestUtils.java:14: error: cannot find symbol
            if (BoatUtils.assignMember(boat, m)) {
                         ^
  symbol:   method assignMember(Member[],Member)
  location: class BoatUtils
BoatTestUtils.java:18: error: cannot find symbol
                if (BoatUtils.isBoatFull(boat)) {
                             ^
  symbol:   method isBoatFull(Member[])
  location: class BoatUtils
2 errors
